--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
       <div class="modal-content" role="dialog" aria-modal="true"></div>
     </div>
 
-    <footer>© 2025 • Educational reference only • No medical claims • Always verify legality in your jurisdiction. • Information can be wrong since this was made with the help of AI</footer>
+    <footer>© 2025 • Educational reference only • No medical claims • Always verify legality in your jurisdiction. • Information can be wrong since this was made with the help of AI •</footer>
 
     <script>
       /* ---------------------------- DATA ---------------------------- */
