--- a/category.html
+++ b/category.html
@@ -47,6 +47,32 @@
       .modal-content h3{margin-bottom:0.9rem;font-size:1.5rem}
       .close-btn{position:absolute;top:1.1rem;right:1.1rem;font-size:1.3rem;background:none;border:none;color:var(--text-dim);cursor:pointer;transition:color 0.3s ease}
       .close-btn:hover{color:var(--accent)}
+      /* ============ MOBILE TWEAKS (≤ 480 px) ============ */
+@media (max-width: 480px) {
+  body        { font-size: 87.5%; }               /* base text 12-13 px   */
+  h1          { font-size: clamp(1.3rem, 5vw, 1.9rem); }
+
+  /* grid becomes narrower cards so two can still fit */
+  .grid       { grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); }
+
+  /* cards shrink a bit */
+  .card       { padding: 1rem; }
+  .card h3    { font-size: 1rem; }
+  .tag        { font-size: 0.65rem; }
+
+  /* search-bar & select tighten up */
+  .search-bar input { padding: 0.7rem 0.8rem; font-size: 0.9rem; }
+  select            { padding: 0.35rem 0.9rem; font-size: 0.9rem; }
+}  .modal-content {
+    max-width: 92vw;          /* almost full-width phone, but with a margin */
+    padding: 1.4rem 1.2rem;   /* a bit tighter */
+    font-size: 0.9rem;        /* shrink text roughly 10 % (optional) */
+  }
+  .modal-content h3 {
+    font-size: 1.25rem;       /* headline scales down too */
+  }
+
+
     </style>
   </head>
   <body>
