--- a/steroids.html
+++ b/steroids.html
@@ -45,6 +45,30 @@
       .modal-content h3{margin-bottom:0.9rem;font-size:1.5rem}
       .close-btn{position:absolute;top:1.1rem;right:1.1rem;font-size:1.3rem;background:none;border:none;color:var(--text-dim);cursor:pointer;transition:color 0.3s ease}
       .close-btn:hover{color:var(--accent)}
+      /* ——— quick-wins / medium extras ——— */
+#disclaimerBanner{position:fixed;bottom:0;left:0;width:100%;padding:.6rem 1rem;
+  background:var(--accent,#ea3546);color:#fff;display:flex;justify-content:space-between;
+  z-index:999;font-size:.9rem}
+#disclaimerBanner button{all:unset;font-size:1.2rem;cursor:pointer;margin-left:.8rem}
+
+#filterToggle{position:fixed;top:1rem;right:1rem;padding:.45rem .9rem;border:0;
+  background:var(--surface-3,#222);color:#fff;border-radius:6px;box-shadow:0 2px 6px rgba(0,0,0,.2);
+  cursor:pointer;z-index:999}
+
+#filterSidebar{position:fixed;top:0;right:0;width:260px;height:100vh;overflow-y:auto;
+  background:var(--surface-1,#111);color:var(--text,#e2e8f0);padding:1rem;
+  box-shadow:-4px 0 12px rgba(0,0,0,.3);transform:translateX(100%);
+  transition:transform .3s ease;z-index:998}
+#filterSidebar.open{transform:translateX(0)}
+
+.chip{display:inline-block;margin:.15rem .25rem .15rem 0;padding:.15rem .55rem;
+  font-size:.75rem;border-radius:9999px;background:var(--surface-2,#272b30);
+  color:var(--text-dim,#a0aec0);cursor:pointer;user-select:none;transition:.2s}
+.chip.active{background:var(--accent,#ea3546);color:#fff}
+
+.riskGauge{display:block;height:8px;width:100%;border-radius:4px;margin-bottom:.4rem;
+  background:linear-gradient(to right,#4caf50 0%,#ffc107 calc((var(--risk)-1)*25%),#f44336 calc((var(--risk)-1)*25%))}
+
     </style>
   </head>
   <body>
@@ -393,5 +417,7 @@
 
       render();
     </script>
+    <script src="enhancements.js" defer></script>
+
   </body>
 </html>
