--- a/index.html
+++ b/index.html
@@ -332,6 +332,11 @@
         .hero h1 {
           line-height: 1.1;
         }
+         /* Dölj texten “Filter” men behåll ikonen */
+  #filterToggle .label { display: none; }
+
+  /* Gör knappen lite kvadratisk så den liknar en vanlig app-ikon */
+  #filterToggle { padding: 0.5rem 0.55rem; }
       }
       /* ——— quick-wins / medium extras ——— */
 #disclaimerBanner{position:fixed;bottom:0;left:0;width:100%;padding:.6rem 1rem;
