--- a/steroids.html
+++ b/steroids.html
@@ -68,6 +68,11 @@
 
 .riskGauge{display:block;height:8px;width:100%;border-radius:4px;margin-bottom:.4rem;
   background:linear-gradient(to right,#4caf50 0%,#ffc107 calc((var(--risk)-1)*25%),#f44336 calc((var(--risk)-1)*25%))}
+/* ============ FILTER-KNAPP MOBIL ============ */
+@media (max-width: 480px) {
+  #filterToggle .label { display: none; }
+  #filterToggle       { padding: 0.5rem 0.55rem; }
+}
 
     </style>
   </head>
