--- a/SARMS.html
+++ b/SARMS.html
@@ -256,6 +256,7 @@
       render();
     </script>
     <script src="enhancements.js" defer></script>
+<script src="upgrades.js" defer></script>
 
   </body>
 </html>
