--- a/index.html
+++ b/index.html
@@ -633,6 +633,7 @@
       
     </script>
     <script src="enhancements.js" defer></script>
+<script src="upgrades.js" defer></script>
 
   </body>
 </html>
