--- a/SERMS.html
+++ b/SERMS.html
@@ -354,6 +354,7 @@
       render();
     </script>
     <script src="enhancements.js" defer></script>
+<script src="upgrades.js" defer></script>
 
   </body>
 </html>
