--- a/category.html
+++ b/category.html
@@ -1330,6 +1330,7 @@ const closeModal = () => {
       render();
     </script>
     <script src="enhancements.js" defer></script>
+<script src="upgrades.js" defer></script>
 
   </body>
 </html>
