--- a/steroids.html
+++ b/steroids.html
@@ -423,6 +423,7 @@
       render();
     </script>
     <script src="enhancements.js" defer></script>
+<script src="upgrades.js" defer></script>
 
   </body>
 </html>
